force-app/main/default/objects/CMN_FeatureSwitches__c/CMN_FeatureSwitches__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>A Hierarchical Custom setting that can be used by developers to switch off features (i.e. disable code, validation rules etc)</description>
    <label>CMN Feature Switches</label>
</CustomObject>