force-app/main/default/objects/CMN_FeatureSwitches__c/fields/CMN_APIsToDisableList1__c.field-meta.xml
<CustomField>
    <fullName>CMN_APIsToDisableList1__c</fullName>
    <description>Used to indicate if one or more API&apos;s should be disabled; the field is a comma delimited list in the form APIName1,APIName2 etc.</description>
    <label>APIs To Disable List 1</label>
    <type>TextArea</type>
</CustomField>