force-app/main/default/objects/CMN_FeatureSwitches__c/fields/CMN_DisableAllOutboundAPICalls__c.field-meta.xml
<CustomField>
    <fullName>CMN_DisableAllOutboundAPICalls__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When switched on for a user or profile then every outbound API Call will be disabled</description>
    <label>Disable All Outbound API Calls</label>
    <type>Checkbox</type>
</CustomField>