force-app/main/default/objects/CMN_FeatureSwitches__c/fields/CMN_MockAllOutboundAPICalls__c.field-meta.xml
<CustomField>
    <fullName>CMN_MockAllOutboundAPICalls__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this to ensure all API calls (for user, profile or org) are returning mocked responses.</description>
    <label>Mock All Outbound API Calls</label>
    <type>Checkbox</type>
</CustomField>