force-app/main/default/objects/CMN_FeatureSwitches__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>CMN_MockAllOutboundAPICalls__c</columns>
    <columns>CMN_DisableAllOutboundAPICalls__c</columns>
    <columns>CMN_APIsToMockList1__c</columns>
    <columns>CMN_APIsToMockList2__c</columns>
    <columns>CMN_APIsToMockList3__c</columns>
    <columns>CMN_APIsToDisableList1__c</columns>
    <columns>CMN_APIsToDisableList2__c</columns>
    <columns>CMN_APIsToDisableList3__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>