force-app/main/default/objects/CMN_FeatureSwitches__c/listViews/CMN_AllFeatureSwitches.listView-meta.xml
<ListView>
    <fullName>CMN_AllFeatureSwitches</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>CMN_DisableAllOutboundAPICalls__c</columns>
    <columns>CMN_APIsToDisableList1__c</columns>
    <columns>CMN_APIsToDisableList2__c</columns>
    <columns>CMN_APIsToDisableList3__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Feature Switches</label>
</ListView>